tests/negative/default_char_is_string.tx
// EXPECTED: COMPILE_ERROR
// Description: Un-typed single quote expression falls back to String, incompatible with Char expecting expressions.
function main() {
    let c = 'a';
    let d: char = c;
}
